--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -b gh-pages -d dist",
     "go": "git add . && git commit -m \"Update\" && git push && npm run build && npm run deploy"
   },
   "dependencies": {
